cluster/apps/media/plex/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: plex
  namespace: media
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: plex
  timeout:
    http:
      requestTimeout: 0s
  httpUpgrade:
  - type: websocket
  tcpKeepalive:
    idleTime: 60s
    interval: 30s
    probes: 5
