cluster/apps/media/plex/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
  annotations:
    hajimari.io/icon: mdi:plex
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
  hostnames:
  - "plex.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: plex
      port: 32400
